--- a/service-front/app/src/Actor/templates/actor/password-reset-request.html.twig
+++ b/service-front/app/src/Actor/templates/actor/password-reset-request.html.twig
@@ -1,6 +1,6 @@
 {% extends '@actor/layout.html.twig' %}
 
-{% block html_title %}{% trans %}Reset your password{% endtrans %} - {{ parent() }}{% endblock %}
+{% block html_title %}{% trans %}Resetting your password{% endtrans %} - {{ parent() }}{% endblock %}
 
 {% block content %}
 <div class="govuk-width-container">
