--- a/service-front/app/src/Actor/templates/actor/lpa-not-found.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-not-found.html.twig
@@ -18,7 +18,7 @@
 
                     <h2 class="govuk-heading-l">{% trans %}Check your answers{% endtrans %}</h2>
                     <div class="govuk-details">
-                        <p class="govuk-body">{% trans %}Activation key:{% endtrans %} <strong>C-{{ passcode }}</strong></p>
+                        <p class="govuk-body">{% trans %}Activation key:{% endtrans %} <strong>C-{{ activation_key }}</strong></p>
                         <p class="govuk-body">{% trans %}Make sure this is the activation key in the letter we sent to you. The donor and each of their attorneys have their own activation key. If you’re using someone else’s activation key, we will not find the LPA.{% endtrans %}</p>
                         <p class="govuk-body">{% trans with {'%link%': path('lpa.add-by-paper-information')}%}Your activation key expires one year after the date on the letter. If your key has expired, you can <a href="%link%" class="govuk-link">ask for a new activation key</a>.{% endtrans %}</p>
                         <p class="govuk-body">{% trans %}<abbr title="lasting power of attorney">LPA</abbr> reference number:{% endtrans %} <strong>{{ referenceNumber }}</strong></p>
