--- a/service-front/app/src/Actor/templates/actor/password-reset-request-done.html.twig
+++ b/service-front/app/src/Actor/templates/actor/password-reset-request-done.html.twig
@@ -15,7 +15,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
                 <h1 class="govuk-heading-xl">{% trans %}Resetting your password{% endtrans %}</h1>
-                <p class="govuk-body-l">{% trans with {'%email%': email } %}We've emailed a link to <strong class="govuk-!-font-weight-bold">%email%</strong> so that you can reset your password.{% endtrans %}</p>
+                <p class="govuk-body-l">{% trans with {'%email%': email } %}We've emailed a link to <strong class="govuk-!-font-weight-bold">%email%</strong> so that you can reset your password for your Use a lasting power of attorney account.{% endtrans %}</p>
                 <p class="govuk-body">
                     {% trans %}
                         If you have not received an email within a few minutes, please check your spam, bulk or junk email folder &mdash; your email system may have blocked it by mistake. If there’s no account with this email address we’ll also let you know.
