--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -276,9 +276,14 @@
             </div>
         </div>
 
+        {{ include('@partials/section-break.html.twig') }}
+
         {% if not forDownload %}
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
+                    <form action={{ path('download-lpa') }}>
+                        <button class="govuk-button" type="submit">{% trans %}Download this LPA summary{% endtrans %}</button>
+                    </form>
                     <p class="govuk-body">
                         <a class="govuk-link check-another"
                            href="{{ path('home') }}">{% trans %}I want to check another LPA{% endtrans %}</a>
