--- a/service-front/app/src/Actor/templates/actor/request-cleanse-note.txt.twig
+++ b/service-front/app/src/Actor/templates/actor/request-cleanse-note.txt.twig
@@ -15,6 +15,9 @@ Requester: {{ data.first_names }} {{ data.last_name }}
 {% if data.actor_role is defined and data.actor_role == 'attorney' %}
 Donor: {{ data.donor_first_names }} {{ data.donor_last_name }} {{ data.donor_dob.format('d/m/Y') }}
 {% endif %}
+{% if data.actor_role is defined and data.actor_role == 'donor' %}
+Attorney: {{ data.attorney_first_names }} {{ data.attorney_last_name }} {{ data.attorney_dob.format('d/m/Y') }}
+{% endif %}
 {% if data.address_on_paper is defined %}
 Address on LPA
 {{ data.address_on_paper }}
