--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -20,18 +20,21 @@
         </div>
 
         {% if not forDownload %}
-            <nav class="moj-sub-navigation" aria-label="Sub navigation">
-                <ul class="moj-sub-navigation__list">
-                    <li class="moj-sub-navigation__item">
-                        <a data-gaEventType="onClick" data-gaAction="Download" data-gaCategory="LPA summary" data-gaLabel="Download this LPA summary" class="govuk-link moj-sub-navigation__link moj-sub-navigation__link--underline" href="{{ path('download-lpa') }}">{% trans %}Download this LPA summary{% endtrans %}</a>
-                    </li>
-                </ul>
-            </nav>
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+                    <div class="govuk-inset-text">
+                        {% trans %}You should download and save this LPA summary. You can use it as evidence that you viewed the LPA summary before acting on it.{% endtrans %}
+                    </div>
+                </div>
+            </div>
+            <form action={{ path('download-lpa') }}>
+                <button class="govuk-button" type="submit">{% trans %}Download this LPA summary{% endtrans %}</button>
+            </form>
         {% else %}
             {{ include('@partials/section-break.html.twig') }}
         {% endif %}
 
-        <div class="govuk-grid-row" >
+        <div class="govuk-grid-row">
 
             <div class="govuk-grid-column-full">
 
@@ -273,9 +276,14 @@
             </div>
         </div>
 
+        {{ include('@partials/section-break.html.twig') }}
+
         {% if not forDownload %}
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
+                    <form action={{ path('download-lpa') }}>
+                        <button class="govuk-button" type="submit">{% trans %}Download this LPA summary{% endtrans %}</button>
+                    </form>
                     <p class="govuk-body">
                         <a class="govuk-link check-another"
                            href="{{ path('home') }}">{% trans %}I want to check another LPA{% endtrans %}</a>
