--- a/service-front/app/src/Actor/templates/actor/request-activation-key/attorney-details.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/attorney-details.html.twig
@@ -37,10 +37,12 @@
                     <h2 class="govuk-heading-l">{% trans %}Attorney's name{% endtrans %}</h2>
                     {{ govuk_form_element(form.get('attorney_first_names'), {
                         'label': 'First names' | trans,
+                        'autocomplete': 'given-name',
                     }) }}
 
                     {{ govuk_form_element(form.get('attorney_last_name'), {
                         'label': 'Last name' | trans,
+                        'autocomplete': 'family-name',
                     }) }}
 
                     {{ govuk_form_fieldset(form.get('attorney_dob'), {
