--- a/service-front/app/src/Common/templates/partials/govuk_form.html.twig
+++ b/service-front/app/src/Common/templates/partials/govuk_form.html.twig
@@ -148,6 +148,7 @@
 
                     {{ govuk_form_element(fieldset.get('day'), {
                         'label': 'Day' | trans,
+                        'autocomplete': 'bday-day',
                         'attr' : {'class': 'govuk-date-input__input govuk-input--width-2', 'label_class': 'govuk-date-input__label'},
                         'inputmode': 'numeric',
                         'pattern': '[0-9]*'
@@ -158,6 +159,7 @@
 
                     {{ govuk_form_element(fieldset.get('month'), {
                         'label': 'Month' | trans,
+                        'autocomplete': 'bday-month',
                         'attr' : {'class': 'govuk-date-input__input govuk-input--width-2', 'label_class': 'govuk-date-input__label'},
                         'inputmode': 'numeric',
                         'pattern': '[0-9]*'
@@ -168,6 +170,7 @@
 
                     {{ govuk_form_element(fieldset.get('year'), {
                         'label': 'Year' | trans,
+                        'autocomplete': 'bday-year',
                         'attr' : {'class': 'govuk-date-input__input govuk-input--width-4', 'label_class': 'govuk-date-input__label'},
                         'inputmode': 'numeric',
                         'pattern': '[0-9]*'
