--- a/service-front/app/src/Actor/templates/actor/partials/check-code-details.html.twig
+++ b/service-front/app/src/Actor/templates/actor/partials/check-code-details.html.twig
@@ -41,7 +41,7 @@
                     {% else %}
                         {# this should only be the case where the user who created the code deleted their lpa, so we can't figure out who the code was created by #}
                         {# this issue will be fixed by UML-1481 #}
-                        <dd class="govuk-summary-list__value"></dd>
+                        <dd class="govuk-summary-list__value">Not available</dd>
                     {% endif %}
                 </div>
 
