--- a/service-front/app/src/Actor/templates/actor/check-access-codes.html.twig
+++ b/service-front/app/src/Actor/templates/actor/check-access-codes.html.twig
@@ -72,10 +72,8 @@
                                 {% for code in shareCodes %}
                                     {% set id_counter = ( id_counter | default(0) ) + 1 %}
                                     {% if not (check_if_code_has_expired(code.Expires) or check_if_code_is_cancelled(code)) %}
-                                        {% if code.UserLpaActor or code.CreatedBy is not empty %}
-                                            {# check UserLpaActor to not show code if it belongs to a deleted LPA #}
-                                            {{ include('@actor/partials/check-code-details.html.twig', {'id_counter': id_counter }) }}
-                                        {% endif %}
+                                        {# show active code even if it belongs to a deleted LPA #}
+                                        {{ include('@actor/partials/check-code-details.html.twig', {'id_counter': id_counter }) }}
                                     {% endif %}
                                 {% endfor %}
                             </div>
