--- a/service-admin/web/templates/result_lpa.partial.gohtml
+++ b/service-admin/web/templates/result_lpa.partial.gohtml
@@ -12,17 +12,25 @@
     {{ if .AddedBy }}
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
-        Added by
+        Details
       </dt>
       <dd class="govuk-summary-list__value">
         <ul class="govuk-list">
         {{ range .AddedBy }}
           <li>{{ .Email }}{{ if .ActivateBy }}<strong class="govuk-tag govuk-tag--grey">key requested</strong>{{ end }}</li>
           <li class="govuk-hint govuk-!-margin-bottom-2">{{ .DateAdded | readableDateTime }}</li>
+           <li>
+           {{ if not .ActivateBy  }}
+                {{ .DateUpdated | readableDateTime }}
+           {{ else }}
+                {{ "Not activated" }}
+           {{ end }}
+           </li>
         {{ end }}
         </ul>
       </dd>
     </div>
+
     {{ end }}
   </dl>
 {{ end }}
